[package]
name = "color-spantrace"
version = "0.1.4"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A pretty printer for tracing_error::SpanTrace based on color-backtrace"
repository = "https://github.com/yaahc/color-spantrace"
documentation = "https://docs.rs/color-spantrace"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-error = "0.1.2"
tracing-core = "0.1.10"
owo-colors = "1.1.3"
once_cell = "1.4.1"

[dev-dependencies]
tracing-subscriber = "0.2.5"
tracing = "0.1.13"
ansi-parser = "0.6.5" # used for testing color schemes
